# krysta_library

./: README.md  pyproject.toml  run_sandbox_test.py  test_client.py  test_display.py  test_redis.py
experiments/: audio_test.py  text_nlp_test.py  vision_xai_test.py
krysta/: __init__.py  claw.py  display.py  exceptions.py  noa.py  sandbox.py  trace.py
krysta_reporter/: engine.py
krysta_reporter.egg-info/: PKG-INFO
krysta_reporter/templates/: base_report.md
krysta_wing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
kwing_reporter/: __init__.py  engine.py
kwing_reporter.egg-info/: SOURCES.txt  requires.txt
kwing_reporter/modalities/: audio.py  text.py  vision.py
kwing_reporter/templates/: base_report.md
workspace_reports/2026/week-21_KWing-BERT-Base/: report.md
workspace_reports/2026/week-21_KWing-Whisper-Voice/: report.md
workspace_reports/2026/week-21_ResNet152-XAI/: report.md
