[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krysta-wing"
version = "1.0.2"
authors = [
    { name = "Anshu Aditya" }
]
description = "A unified multimodal model evaluation tracking and engineering report engine."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jinja2>=3.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0"
]

[project.urls]
"Homepage" = "https://github.com/your-username/kwing_library"

[tool.setuptools]
packages = ["krysta_reporter", "krysta"]

[tool.setuptools.package-data]
"krysta_reporter" = ["templates/*.md"]