[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krysta"
version = "1.0.7"
authors = [
    { name = "Anshu Aditya" }
]
description = "A unified multimodal model evaluation tracking and engineering report engine."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0"
]

[project.urls]
"Homepage" = "https://github.com/Krysta-Wing/"

[tool.setuptools]
packages = ["krysta_reporter", "krysta"]

[tool.setuptools.package-data]
"krysta_reporter" = ["templates/*.md"]